# composite-video-simulator

./: .clang-format  .gitignore  CMakeLists.txt  Doxyfile  FindFFmpeg.cmake  composite-video-simulator.sublime-project  ffmpeg_average_delay.cpp  ffmpeg_cassette.cpp  ffmpeg_colorkey.cpp  ffmpeg_colormap.cpp  ffmpeg_ntsc.cpp  ffmpeg_posterize.cpp  ffmpeg_scanimate.cpp  ffmpeg_to_composite.cpp  frameblend.cpp  normalize_ts.cpp
Docs/: Notes.md
